<resources>
    <string name="app_name">Restaurant-Roulette</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="findPlaceText">FIND A PLACE</string>
    <string name="addressTextString">Put an address to  find places nearby.</string>
    <string name="radText">Travel Radius</string>
    <string name="historyString">Roll History</string>
    <string name="restID">"Maps ID: "</string>
    <string name="restName">Restaurant Name</string>
    <string name="restRating">"Rating: "</string>
    <string name="restPhoneNumber">Phone:</string>
    <string name="restWebsite">Site:</string>
    <string name="googleMapsURL">"Maps: "</string>
    <string name="restAddress">Address:</string>
    <string name="restHours">Hours:</string>
    <string name="rollButton">Reroll</string>
    <string name="historyTextView">Roll History</string>
    <string name="backButton">Back</string>
    <string name="clearHistoryString">Clear History</string>
</resources>
