<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".restaurantDetailsActivity">

    <Button
        android:id="@+id/historyButton"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:onClick="historyButton"
        android:text="@string/historyString"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restName" />

    <TextView
        android:id="@+id/restName"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/restName"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/restID"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:text="@string/restID"
        android:textAllCaps="true"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/historyButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/restaurantID"
        app:layout_constraintTop_toBottomOf="@+id/restName" />

    <TextView
        android:id="@+id/restaurantID"
        android:layout_width="55dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/restID"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restName" />

    <ScrollView
        android:id="@+id/restDetailsView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:scrollbarStyle="outsideOverlay"
        app:layout_constraintBottom_toTopOf="@+id/rerollButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restID">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Rating"
                android:layout_width="55dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/restRating"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/restRating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/restRating"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/Rating"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Phone"
                android:layout_width="55dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/restPhoneNumber"
                android:textAlignment="viewStart"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/restRating" />

            <TextView
                android:id="@+id/restPhoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/restPhoneNumber"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/Phone"
                app:layout_constraintTop_toBottomOf="@+id/restRating" />

            <TextView
                android:id="@+id/Address"
                android:layout_width="70dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/restAddress"
                android:textAlignment="viewStart"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/restPhoneNumber" />

            <TextView
                android:id="@+id/restAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/restAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/Address"
                app:layout_constraintTop_toBottomOf="@+id/restPhoneNumber" />

            <TextView
                android:id="@+id/Site"
                android:layout_width="55dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/restWebsite"
                android:textAlignment="viewStart"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/restAddress" />

            <TextView
                android:id="@+id/restWebsite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/restWebsite"
                android:textAlignment="viewStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/Site"
                app:layout_constraintTop_toBottomOf="@+id/restAddress"
                android:autoLink="web"/>

            <TextView
                android:id="@+id/Maps"
                android:layout_width="55dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/googleMapsURL"
                android:textAlignment="viewStart"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/restWebsite" />

            <TextView
                android:id="@+id/googleMapsURL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/googleMapsURL"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/Maps"
                app:layout_constraintTop_toBottomOf="@+id/restWebsite"
                android:autoLink="web"/>

            <TextView
                android:id="@+id/Hours"
                android:layout_width="55dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/restHours"
                android:textAlignment="viewStart"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/googleMapsURL" />

            <TextView
                android:id="@+id/restHours"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/restHours"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/Hours"
                app:layout_constraintTop_toBottomOf="@+id/googleMapsURL" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/rerollButton"
        android:layout_width="86dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="reroll"
        android:text="@string/rollButton"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>